[package]
name = "reframed_server"
version = "0.1.0"
authors = ["TheComet <alex.murray@gmx.ch>"]
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
crc = "3.0.1"
lazy_static = "1.4.0"
num_enum = "0.7.2"
skyline = "0.2.0"
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }
acmd = { git = "https://github.com/ultimate-research/skyline-acmd.git" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
